[package]
name = "liars"
version = "0.1.0"
authors = ["David Teller <D.O.Teller@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "liarslie"
path = "examples/liarslie.rs"

[dependencies]
clap = "*"
rand = "*"
serde = "*"
serde_derive = "*"
serde_json = "*"
tokio = { version = "0.2", features = ["full"] }

[dev-dependencies]
tokio-test = { version = "0.2" }
